[package]
name = "tmux-thumbs"
version = "0.2.6"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
edition = "2018"
description = "A lightning fast version of tmux-fingers, copy/pasting tmux like vimium/vimperator"
repository = "https://github.com/fcsonline/tmux-thumbs"
keywords = ["rust", "tmux", "tmux-plugin", "vimium", "vimperator"]
license = "MIT"

[dependencies]
rustbox = "0.11.0"
regex = "1.1.2"
clap = "2.32.0"

[[bin]]
name = "thumbs"
path = "src/main.rs"

[[bin]]
name = "tmux-thumbs"
path = "src/swapper.rs"
