[package]
name = "thumbs"
version = "0.5.1"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
edition = "2018"
description = "A lightning fast version copy/pasting like vimium/vimperator"
repository = "https://github.com/fcsonline/tmux-thumbs"
keywords = ["rust", "tmux", "tmux-plugin", "vimium", "vimperator"]
license = "MIT"

[dependencies]
termion = "1.5"
regex = "1.3.1"
clap = "2.33.0"
base64 = "0.11.0"
unicode-width = "0.1.7"
lazy_static = "1.4.0"

[[bin]]
name = "thumbs"
path = "src/main.rs"

[[bin]]
name = "tmux-thumbs"
path = "src/swapper.rs"
